vlib/v/checker/tests/none_match_cond_err.out
vlib/v/checker/tests/none_match_cond_err.vv:1:1: error: `none` cannot be a match condition
    1 | match none {
      | ~~~~~~~~~~~~
    2 |     none {}
    3 |     else {}
